-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.14.2
-
-
c70d693378b8110c09fdd18d7a4a22e8bd1b98d9 (qt/qtbase/dev)
No matter what cipher is set for the configuration, it is overwritten by the default one later.
Its reproducible with the sslechoclient-sslechoserver example, overwriting the original with the attached file.
For Gerrit Dashboard: QTBUG-83491 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
297442,4 | SecureTransport: Set requested ciphers specified in the configuration | dev | qt/qtbase | Status: MERGED | +2 | 0 |